[package]
name = "cargo-token"
version = "0.1.0"
description = "A small extension for cargo that allows you to fetch your publish token from the command line"
readme = "README.md"
license-file = "LICENSE"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
dirs = "3.0"
serde = { version = "1.0.125", features = ["derive"] }